# gomoku-mcp-server

./: .gitignore  README.md  agent.py  main.py  pyproject.toml
src/: cli.py  client.py  gomoku.py  gui.py  manager.py  models.py  schema.py  server.py  utils.py  web.py  web_server.py
src/game/: gomoku.py
src/mcp_server/: client.py  server.py
src/prompts/: system_prompt.py  user_prompt.py
tests/: test_gomoku.py  test_gomoku_visualize.py
